--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,9 @@
 				<artifactId>flyway-maven-plugin</artifactId>
 				<version>4.1.1</version>
 			</plugin>
+			<configuration>
+				<skipDefaultCallbacks>true</skipDefaultCallbacks>
+			</configuration>
 		</plugins>
 	</build>
 
